<resources>
    <string name="app_name">InvApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_godown_id">Please select a godown</string>
    <string name="invalid_customer_name">Please enter customer name</string>
    <string name="invalid_invoice_products">Add at least one valid product</string>
    <string name="invalid_product_name">Cannot be empty</string>
    <string name="invalid_product_qty">Quantity must be > 0</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_shop_code">Shop Code must be >3 characters</string>
    <string name="app_shared_preferences">APP_SHARED_PREFERENCES</string>
    <string name="prefs_key_token">token</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="login_heading">Hello, hope you\'re good!</string>
    <string name="code">Code</string>
    <string name="title_godown_add_stock">Godown Add Stock</string>
    <string name="title_godown_check_stock">Godown Check Stock</string>
    <string name="title_godown_stock_history">Godown Stock History</string>
    <string name="title_invoice">Invoice</string>
    <string name="title_orders">Orders</string>
    <string name="title_add_stock">Add Stock</string>
    <string name="title_stock">Stock</string>
    <string name="title_sales">Sales</string>
    <string name="title_delivery">Delivery</string>
    <string name="customers_name">Customer\'s Name</string>
    <string name="done">Done</string>
    <string name="add_godown">Add Godown</string>
    <string name="products">Products</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="qty">Qty</string>
    <string name="range">Range</string>
    <string name="brand">Brand</string>
    <string name="name">Name</string>
    <string name="orders">Orders</string>
    <string name="vertical_line">｜</string>
    <string name="dot">•</string>
    <string name="big_dot">●</string>
    <string name="enter_godown_name">Enter Godown Name</string>
    <string name="sales">Sales</string>
    <string name="search">Search</string>
    <string name="tap_to_check_stock">Tap to check stock</string>
    <string name="product_code">Product code</string>
    <string name="product_name">Product name</string>
    <string name="product_brand">Product brand</string>
    <string name="quantity">Quantity</string>
    <string name="product_range">Product Range</string>
    <string name="intent_extra_godown_id">INTENT_EXTRA_GODOWN_ID</string>
    <string name="intent_extra_godown_name">INTENT_EXTRA_GODOWN_NAME</string>
    <string name="godown_stock_details">Godown Stock Details</string>
    <string name="code_caps">CODE</string>
    <string name="name_caps">NAME</string>
    <string name="brand_caps">BRAND</string>
    <string name="range_caps">RANGE</string>
    <string name="qty_caps">QTY</string>
    <string name="godown_stock_history">Godown Stock History</string>
    <string name="stock_caps">STOCK</string>
    <string name="user_caps">USER</string>
    <string name="by_caps">BY</string>
    <string name="search_query">Search Query</string>
    <string name="godown">Godown</string>
</resources>