<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    tools:context=".ui.invoice.InvoiceFragment">

    <TextView
        android:id="@+id/tv_invoice_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/title_invoice"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_customer_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/customer_name_edit_text_height"
        android:layout_margin="16dp"
        android:background="@drawable/curve_bg_white"
        android:fontFamily="@font/montserrat"
        android:hint="@string/customers_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_invoice_heading" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_customer_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:background="@drawable/curve_bg_white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/products"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/justBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center"
                    android:text="@string/brand"
                    android:textColor="@color/justBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center"
                    android:text="@string/range"
                    android:textColor="@color/justBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center"
                    android:text="@string/qty"
                    android:textColor="@color/justBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_invoice_product_items"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                tools:itemCount="10"
                tools:listitem="@layout/list_item_invoice_product" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_invoice_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat_semi_bold"
            android:paddingHorizontal="64dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>